fix: show multiple markers if overlapping

--- a/packages/tv-ui/src/components/slide/MediaSlide/MediaSlide.scss
+++ b/packages/tv-ui/src/components/slide/MediaSlide/MediaSlide.scss
@@ -145,7 +145,7 @@
     }
   }
 
-  .tags > .joiner {
+  .currently-playing-marker .joiner {
     color: var(--text-muted);
     font-style: italic;
   }
